# smart_c_v2

./: .gitignore  db.sqlite3  pyproject.toml  replit_zip_error_log.txt  test.py
.cache/replit/: __replit_disk_meta.json
.upm/: store.json
django_project/: settings.py  urls.py
file_generation/: apps.py  chat_2023_06_25_23_57_51.md  file_funcs.py  nanan.py  openai_utils.py  views.py
file_generation/templates/file_generation/: index.html
file_generation/tex_templates/: 21cb08f9-05b4-471a-8c84-1b70ea556cb4_cover_letter.tex  21cb08f9-05b4-471a-8c84-1b70ea556cb4_resume.pdf.tex  21cb08f9-05b4-471a-8c84-1b70ea556cb4_resume.tex
resume_app/: admin.py  models.py  views.py
resume_app/migrations/: 0001_initial.py  0002_alter_education_personal_info_and_more.py  0003_rename_is_objective_filled_personalinfo_is_additional_information_clicked_and_more.py  0004_existinginformation.py
resume_app/templates/resume_app/: additional_info.html  affiliations.html  awards.html  education.html  existing_resume.html  internship.html  job_description.html  landing.html  objective.html  personal_info.html  references.html  skills.html  work_experience.html
resume_app/templates/resume_app/partial_views/: base.html  base_2nd.html
